# whoomp_docker

./: .gitignore  README.md  development.md  docker-compose.yml  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: parse_history.py  parser.py  plot.py  whoop.py
dist-node/src/: file.js  packet.js  queue.js  whoomp.d.ts
dist-node/src/components/: Buttons.js  DeviceInfo.js  Header.js  HeartRateChart.js  TerminalLog.d.ts  TerminalLog.js  UtilityFunctions.js
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: test.ts
src/: App.tsx  file.ts  packet.ts  whoomp.ts
src/components/: DeviceInfoCard.tsx  Header.tsx  Notification.tsx  TerminalLogs.tsx
src/components/buttons/: ActionButtons.tsx  Button.tsx
src/components/charts/: HeartRateChart.tsx
whoomp1/whoomp_react_fastapi_docker/whoomp_react/: .env  index.html  package-lock.json  plan.md  tsconfig.json
whoomp1/whoomp_react_fastapi_docker/whoomp_react/backend/: pyproject.toml
whoomp1/whoomp_react_fastapi_docker/whoomp_react/backend/app/: main.py
whoomp1/whoomp_react_fastapi_docker/whoomp_react/dist-node/: vite.config.js
whoomp1/whoomp_react_fastapi_docker/whoomp_react/dist-node/src/: App.js  file.d.ts  main.js  packet.d.ts  queue.d.ts  ui.d.ts  (+2 more)
whoomp1/whoomp_react_fastapi_docker/whoomp_react/scripts/: build.sh
whoomp1/whoomp_react_fastapi_docker/whoomp_react/src/: Dockerfile  packet.ts  queue.ts  ui.ts
(+13 files in other folders)
