[project]
name = "Whoomp"
version = "0.1.0"
description = "Bluetooth-enabled Whoop webapp"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.95.0,<1.0.0",
    "httpx<1.0.0,>=0.25.1",
    "pydantic-settings<3.0.0,>=2.2.1",
    "numpy",
    "matplotlib",
    "scipy",
    "pytz",
    "uvicorn",
    "bleak",
    "prompt_toolkit",
    "plotly",
    "pandas>=2.2.3",
    "tzlocal>=5.2",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", ]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
